DFR-439: Integrate Fortify Scan into nightly pipeline (#1482)
* DFR-439: Inegrate Fortify Scan into nightly pipeline